Fix spacing on image-strip

--- a/betta-0.0.5.css
+++ b/betta-0.0.5.css
@@ -2486,6 +2486,7 @@ form > button.icon-button {
   overflow-x: hidden;
   white-space: nowrap;
   scrollbar-width: 0;
+  padding-top: 2rem;
   padding-bottom: 1rem;
 }
 .betta_image-strip .back,
