--- a/components/_image-strip.scss
+++ b/components/_image-strip.scss
@@ -5,6 +5,7 @@
   overflow-x: hidden;
   white-space: nowrap;
   scrollbar-width: 0;
+  padding-top: 2rem;
   padding-bottom: 1rem;
 
   .back,
